# plantgl-jupyter

./: .coveragerc  .dockerignore  .gitignore  .gitmodules  .npmignore  .travis.yml  HOWTO.md  LICENSE.txt  MANIFEST.in  README.md  RELEASE.md  appveyor.yml  codecov.yml  environment-dev.yml  install.json  package-lock.json  package.json  pgljupyter.json  pyproject.toml  pytest.ini  setup.py  travis.yml  tsconfig.json  webpack.config.js
binder/: Dockerfile  environment.yml
conda/: bld.bat  build.sh  emsdk_install.bat  meta.yaml  post-link.bat  post-link.sh  pre-unlink.bat  pre-unlink.sh
css/: widget.css
docker/: Dockerfile  README.md  build.Dockerfile  conda.Dockerfile  dev.Dockerfile  prod.Dockerfile
docs/: Makefile  environment.yml  make.bat
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
docs/source/_static/: embed-bundle.js.LICENSE.txt
docs/source/examples/: introduction.nblink
examples/: .gitignore  broccoli.ipynb  examples.yml  integration-demo.ipynb  integration.ipynb  magic_champignon.ipynb  r_and_py.ipynb  spheres.ipynb  xarray-simlab.ipynb
examples/bgeom/: vmango.bgeom
examples/lpy/: dynamicprofile.ipynb  dynamicprofile.json  dynamicprofile.lpy  dynamicprofile.toml  leuwenberg.ipynb  leuwenberg.json  leuwenberg.lpy  simple_growth.ipynb
examples/lpy-simlab/: lpy-simlab.ipynb  lpy_carbon_light.ipynb  lpy_simlab_process.py  run.py  util.py
examples/lpy/dynamicprofile/: dynamicprofile.ipynb  dynamicprofile.json  dynamicprofile.lpy
examples/lpy/leuwenberg/: leuwenberg.ipynb  leuwenberg.json  leuwenberg.lpy  lpy_plot_magic.ipynb
examples/lpy/simple_growth/: simple_growth.ipynb  simple_growth.lpy
examples/lpy/sweep_surface/: sweep_surface.ipynb  sweep_surface.json
examples/test_js_impl/: js_impl.ipynb
ifb/: ifb.sh
pgljupyter/: __init__.py  _frontend.py  _version.py  editors.py  magics.py  widget.py  widgets.py
pgljupyter/nbextension/: __init__.py
pgljupyter/nbextension/static/: extension.js
pgljupyter/schema/: category.json  curve.json  function.json  lpy.json  material.json  options.json  scalar.json
pgljupyter/tests/: test_example.py  test_nbextension_path.py
src/: extension.ts  index.ts  interfaces.ts  labplugin.ts  mesh-decoder.ts  version.ts  widget.ts
src/lib/: controls.ts  interfaces.ts  mesh-decoder.ts  widget.ts
src/pgljs/: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json  rollup.config.js  rollup.config.worker.js
src/pgljs/debug/: index.html
src/pgljs/scripts/: stringify_wasm.js  stringify_worker.js
src/pgljs/src/: api.js  index.js  pgljs.cpp  pgljs.h  pgljs.webidl  pgljs_glue_wrapper.cpp  pre.js  worker.js
src/widgets/: bgeom-decoder.ts  consts.ts  controls.ts  decoder.ts  draco-decoder.ts  editors.ts  geom.ts  interfaces.ts  models.ts  orbit-controls.ts  shapes.ts  types.ts  utilities.ts  widgets.ts
tests/: karma.conf.js  tsconfig.json
tests/src/: index.spec.ts  utils.spec.ts
